version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/Tree.rst.txt
.. vale off



:class:`Tree`
=============

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.Tree

   Bases: :py:obj:`object`








.. py:currentmodule:: Tree

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~GetTreeHandler`
            - GetTreeHandler method.
          * - :py:attr:`~IsObjInTreeView`
            - IsObjInTreeView method.
          * - :py:attr:`~OnActiveObjectChangedFwd`
            - OnActiveObjectChangedFwd method.
          * - :py:attr:`~add_OnActiveObjectChanged`
            - add_OnActiveObjectChanged method.
          * - :py:attr:`~remove_OnActiveObjectChanged`
            - remove_OnActiveObjectChanged method.


   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - selects an object in the tree.
          * - :py:attr:`~CanAddTreeGroupingFolder`
            - CanAddTreeGroupingFolder method.
          * - :py:attr:`~ClearFilter`
            - Clears the current filter.
          * - :py:attr:`~ClearSort`
            - Clears the current sort.
          * - :py:attr:`~Click`
            - Click method.
          * - :py:attr:`~CreateObjRef`
            - CreateObjRef method.
          * - :py:attr:`~ExpandBranch`
            - ExpandBranch method.
          * - :py:attr:`~Filter`
            - Filters the tree objects based on given parameters.
          * - :py:attr:`~Find`
            - Find method.
          * - :py:attr:`~GetDataModelChanges`
            - GetDataModelChanges method.
          * - :py:attr:`~GetEnumerator`
            - GetEnumerator method.
          * - :py:attr:`~GetLifetimeService`
            - GetLifetimeService method.
          * - :py:attr:`~GetObjectsByName`
            - Gets a list of all objects with the specified name.
          * - :py:attr:`~GetObjectsByType`
            - Gets a list of all objects with the specified type.
          * - :py:attr:`~GetPathToFirstActiveObject`
            - Gets the full path that needs to be typed in order to go to the selected object.
          * - :py:attr:`~Group`
            - Groups a list of objects together.
          * - :py:attr:`~InitializeLifetimeService`
            - InitializeLifetimeService method.
          * - :py:attr:`~IsSorted`
            - Checks if the tree is currently sorted alphabetically.
          * - :py:attr:`~Refresh`
            - Refreshes the tree.
          * - :py:attr:`~Sort`
            - Sorts the tree objects based on given parameters.
          * - :py:attr:`~StartListening`
            - StartListening method.
          * - :py:attr:`~StopListening`
            - StopListening method.
          * - :py:attr:`~Suspend`
            - Prevents the tree from being updated.
          * - :py:attr:`~TryGetFolder`
            - TryGetFolder method.
          * - :py:attr:`~Ungroup`
            - Removes groupingFolder from the tree.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ActiveObjects`
            - Gets a list of all selected objects.
          * - :py:attr:`~AllObjects`
            - Gets a list of all objects available in the tree.
          * - :py:attr:`~CurrentFilter`
            - Gets the current filter applied on the tree.
          * - :py:attr:`~CurrentSearchGraphics`
            - Gets the current visibility.
          * - :py:attr:`~CurrentSearchState`
            - Gets the current search state.
          * - :py:attr:`~CurrentSearchString`
            - Gets the current search string (name/tag/propertyName/propertyValue).
          * - :py:attr:`~FirstActiveObject`
            - Gets the first object selected in the tree.
          * - :py:attr:`~GroupingFoldersVisible`
            - Controls whether or not group folders are visible.







Property detail
---------------
.. py:property:: ActiveObjects
   :type: Optional[List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]


   
   Gets a list of all selected objects.
















   ..
       !! processed by numpydoc !!

.. py:property:: AllObjects
   :type: Optional[List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]


   
   Gets a list of all objects available in the tree.
















   ..
       !! processed by numpydoc !!

.. py:property:: CurrentFilter
   :type: Optional[Ansys.Common.Interop.DSObjectTypes.DSTreeSearchType]


   
   Gets the current filter applied on the tree.
















   ..
       !! processed by numpydoc !!

.. py:property:: CurrentSearchGraphics
   :type: Optional[Ansys.Mechanical.DataModel.Enums.VisibilityType]


   
   Gets the current visibility.
















   ..
       !! processed by numpydoc !!

.. py:property:: CurrentSearchState
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ObjectState]


   
   Gets the current search state.
















   ..
       !! processed by numpydoc !!

.. py:property:: CurrentSearchString
   :type: Optional[str]


   
   Gets the current search string (name/tag/propertyName/propertyValue).
















   ..
       !! processed by numpydoc !!

.. py:property:: FirstActiveObject
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   Gets the first object selected in the tree.
















   ..
       !! processed by numpydoc !!

.. py:property:: GroupingFoldersVisible
   :type: Optional[bool]


   
   Controls whether or not group folders are visible.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate(dataModelObject: Ansys.Mechanical.DataModel.Interfaces.IDataModelObject) -> None
               Activate(dataModelObjects: Iterable[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]) -> None

   
   selects an object in the tree.

   ..
       !! processed by numpydoc !!

.. py:method:: CanAddTreeGroupingFolder(dataModelObject: Ansys.Mechanical.DataModel.Interfaces.IDataModelObject) -> bool

   
   CanAddTreeGroupingFolder method.

   ..
       !! processed by numpydoc !!

.. py:method:: ClearFilter() -> None

   
   Clears the current filter.

   ..
       !! processed by numpydoc !!

.. py:method:: ClearSort() -> None

   
   Clears the current sort.

   ..
       !! processed by numpydoc !!

.. py:method:: Click() -> None

   
   Click method.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateObjRef(requestedType: type) -> System.Runtime.Remoting.ObjRef

   
   CreateObjRef method.

   ..
       !! processed by numpydoc !!

.. py:method:: ExpandBranch(objectId: int) -> None

   
   ExpandBranch method.

   ..
       !! processed by numpydoc !!

.. py:method:: Filter(name: str, tag: str, state: Ansys.Mechanical.DataModel.Enums.ObjectState, visibility: Ansys.Mechanical.DataModel.Enums.VisibilityType, type: Ansys.Mechanical.DataModel.Enums.TreeFilterObjectClass, coordinateSystem: Ansys.ACT.Automation.Mechanical.CoordinateSystem, model: str, environment: Ansys.ACT.Automation.Mechanical.Analysis, scoping: Ansys.Mechanical.DataModel.Enums.TreeFilterScopingType, filterState: Ansys.Mechanical.DataModel.Enums.TreeFilterObjectState, propertyName: str, propertyValue: str) -> None

   
   Filters the tree objects based on given parameters.

   ..
       !! processed by numpydoc !!

.. py:method:: Find(name: str, func: Callable[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject, bool], tag: str, state: Ansys.Mechanical.DataModel.Enums.ObjectState) -> Iterable[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]

   
   Find method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetDataModelChanges(added: List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject], modified: List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject], removed: List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]) -> None

   
   GetDataModelChanges method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumerator() -> Ansys.ACT.Automation.Mechanical.TreeObjects

   
   GetEnumerator method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetLifetimeService() -> Any

   
   GetLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectsByName(name: str) -> List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]

   
   Gets a list of all objects with the specified name.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectsByType(type: Tree.GetObjectsByType.type) -> List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]
               GetObjectsByType(dataModelObjectCategory: Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory) -> List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]

   
   Gets a list of all objects with the specified type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPathToFirstActiveObject() -> str

   
   Gets the full path that needs to be typed in order to go to the selected object.

   ..
       !! processed by numpydoc !!

.. py:method:: GetTreeHandler() -> Ansys.Common.Interop.SimulationUIHandlers.ISimulationTreeHandler
   :classmethod:


   
   GetTreeHandler method.

   ..
       !! processed by numpydoc !!

.. py:method:: Group(dataModelObjects: Iterable) -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder
               Group(dataModelObject: Ansys.Mechanical.DataModel.Interfaces.IDataModelObject) -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Groups a list of objects together.

   ..
       !! processed by numpydoc !!

.. py:method:: InitializeLifetimeService() -> Any

   
   InitializeLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsObjInTreeView(dataModelObj: Ansys.Mechanical.DataModel.Interfaces.IDataModelObject) -> bool
   :classmethod:


   
   IsObjInTreeView method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsSorted() -> bool

   
   Checks if the tree is currently sorted alphabetically.

   ..
       !! processed by numpydoc !!

.. py:method:: OnActiveObjectChangedFwd(sender: Any, args: Any) -> None
   :classmethod:


   
   OnActiveObjectChangedFwd method.

   ..
       !! processed by numpydoc !!

.. py:method:: Refresh() -> None

   
   Refreshes the tree.

   ..
       !! processed by numpydoc !!

.. py:method:: Sort(type: Ansys.Mechanical.DataModel.Enums.SortingType, reverse: bool) -> None

.. code-block:: text

   Sorts the tree objects based on given parameters.
   Type of sorting to apply.
   Wheter to sort in reverse order.

   Note that all parameters of Sort are optional.
   type: Defaults to alphabetical
   reverse: Defaults to false

   sorting in reverse order is currently not supported

    Usage example - sort alphabetically
   ExtAPI.DataModel.Tree.Sort()

    Usage example - sort alphabetically
   ExtAPI.DataModel.Tree.Find(type=SortingType.Alphabetical, reverse=False)
..
       !! processed by numpydoc !!

.. py:method:: StartListening() -> None

   
   StartListening method.

   ..
       !! processed by numpydoc !!

.. py:method:: StopListening() -> None

   
   StopListening method.

   ..
       !! processed by numpydoc !!

.. py:method:: Suspend() -> System.IDisposable

   
   Prevents the tree from being updated.

   ..
       !! processed by numpydoc !!

.. py:method:: TryGetFolder(obj: Ansys.Mechanical.DataModel.Interfaces.IDataModelObject) -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   TryGetFolder method.

   ..
       !! processed by numpydoc !!

.. py:method:: Ungroup(groupingFolder: Ansys.ACT.Automation.Mechanical.TreeGroupingFolder) -> None

   
   Removes groupingFolder from the tree.

   ..
       !! processed by numpydoc !!

.. py:method:: add_OnActiveObjectChanged(value: System.EventHandler[Ansys.ACT.Automation.Mechanical.ActiveObjectChangedEventArgs]) -> None
   :classmethod:


   
   add_OnActiveObjectChanged method.

   ..
       !! processed by numpydoc !!

.. py:method:: remove_OnActiveObjectChanged(value: System.EventHandler[Ansys.ACT.Automation.Mechanical.ActiveObjectChangedEventArgs]) -> None
   :classmethod:


   
   remove_OnActiveObjectChanged method.

   ..
       !! processed by numpydoc !!



.. vale on